Regression: some WMV files can't be played anymore
The files are faulty, but used to work in 2.0.8 and work with avformat demuxer.
The files are faulty, but used to work in 2.0.8 and work with avformat demuxer.
added Component::Demuxers Severity::normal Type::bug Version::master git + 1 deleted label
changed milestone to %Bugs paradize
changed the description
commit 991b4067 Author: Francois Cartegnie fcvlcdev@free.fr Date: Tue Nov 26 15:40:33 2013 +0100
demux: asf: ignore empty sub-payloads (fix [#9990](https://code.videolan.org/videolan/vlc/-/issues/9990))
added Status::fixed label
closed
VideoLAN code repository instance