demux: asf: ignore empty sub-payloads (fix #9990)